--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       function drawChart() {
 
         var data = google.visualization.arrayToDataTable([
-          ['Tema', 'Datos asignados por PDF prueba'],
+          ['Tema', 'Datos'],
           ['IE6',     5],
           ['IE7',      20],
           ['IE8',  75]
         ]);
 
         var options = {
-          title: 'Usando librería google chart'
+          title: 'Default Data For The Example'
         };
 
         var chart = new google.visualization.PieChart(document.getElementById('piechart'));
