--- a/index1.html
+++ b/index1.html
@@ -27,7 +27,7 @@
         ]);
 
         var options = {
-          title: 'Usando librería google chart'
+          title: 'Custom Data'
         };
 
         var chart = new google.visualization.PieChart(document.getElementById('piechart'));
