--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
        <H1>Julian Alejandro Sanchez Lugo</H1>
 
-       <a href="index1.html"> <img src="volver1.png"> </a>
+       <a href="index1.html"> <img src="boton1.png"> </a>
       
     </body>
 
