Agregando un nuevo boton
Agrego botón para volver a ingresar nuevos valores.

--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,8 @@
       <center>
 
        <H1>Julian Alejandro Sanchez Lugo</H1>             
-       <a href="index.html"> <img src="volver2.png"> </a>
+       <a href="index.html"> <img src="boton2.png"> </a>
+       <a href="index1.html"> <img src="boton3.png"> </a>
       
     </body>    
     
